ability to allow /groupspawn to always point to "world", for example, or
even just on certain worlds, it could point to another world.
* added new strategies: homeAnyWorld, homeSpecificWorld and
spawnGroupSpecificWorld. Read wiki strategy doc for more info on these.
* added strategy "modes", which is a way to alter the way existing
strategies work in order to get even more specific behaviors.

v0.9 - November 12, 2011
* new feature: WorldGuard region-spawn support via "spawnWGregion" strategy
* new feature: Economy fees using optional Vault dependency
* new feature: spawnSpecificWorld strategy
* new feature: spawnNamedSpawn strategy
* new command: /setdefaultspawn to allow for defining the default spawn
out of multiple named spawns that might exist in a world
* new feature: usurpCommands - admin can specify commands s/he wants this
plugin to takeover if other plugins are using it (ie. usurp "/home" from
CommandBook, which loads first alphabetically)
* new feature: implemented "spawnNearest" spawn strategy

v0.8 - September 27, 2011
* changed base permission prefix from 'HomeSpawnPlus' to 'hsp'
* added flexible spawn/home strategies, see default 'config.yml' or documentation
* added warmup capability
* added firstLogin capability for newbie spawning
* conceptual notion of "nearest" spawn/home introduced, strategy not fully
implemented yet
* config options have changed, automatically move old one out of the way and
copy the new default into place
* implemented data backup and restore (use /hsp backup, /hsp restore)
* added Superperms permission nodes
* BUGFIX: fixed problem that prevented sleeping in beds at night
* BUGFIX: fixed a bug that prevented group spawning from working properly

v0.7 - July 17, 2011
* made it so "defaultWorld" is also the default spawn world for new players
* added "core.defaultPermissions" so admins can enable defaultPermissions if
they aren't using a Permission-compatible plugin